# ocr_fastapi_service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  exception.py  main.py  nginx.conf  pyproject.toml
routers/: api.py  files.py  service.py
scripts/: utils.py
tests/: conftest.py  test_main.py
