[tool.poetry]
name = "fastapi ocr service"
version = "0.1.0"
description = "This is an OCR web-app built on FastAPI and Google's Tesseract."
authors = ["RomanchenkoAS <RomanchenkoAS@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
pydantic = "^2.7.4"
requests = "^2.32.3"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
